--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
       </div>
       <!-- <img src="static/imgs/me.jpeg" alt="Me-on-a-mountain"> -->
       <video autoplay muted playsinline loop class="landing-video">
-        <source src="static/videos/stones.mp4" type="video/mp4" />
+        <source src="static/videos/stones-compressed.mp4" type="video/mp4" />
       </video>
     </section>
     <section class="page">
