--- a/static/styles.css
+++ b/static/styles.css
@@ -16,6 +16,7 @@ h1 {
     Times New Roman, serif !important;
   font-weight: 900;
   font-size: clamp(5vw, 5vw, 200px);
+  color: #fff;
 }
 h2,
 .auto-type {
@@ -41,6 +42,7 @@ header {
   width: 100%;
   text-align: center;
   background-color: #000;
+  background-color: transparent;
   transition: background-color 0.5s ease;
   color: #fff;
 }
@@ -151,4 +153,18 @@ footer {
     margin: auto;
     text-align: center;
   }
+}
+
+
+#particles-js {
+  width: 100%;
+  height: 90vh;
+  background-color: #000;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+canvas {
+  display: block;
 }
