--- a/templates/index.html
+++ b/templates/index.html
@@ -26,23 +26,20 @@
       </nav>
     </header>
     <section id="landing-page">
+      <div id="particles-js"></div>
       <div class="content">
         <div class="title-box">
           <h1>Leo Craig</h1>
           <h1>Interactive Resume</h1>
         </div>
       </div>
-      <!-- <img src="static/imgs/me.jpeg" alt="Me-on-a-mountain"> -->
-      <video autoplay muted playsinline loop class="landing-video">
-        <source src="static/videos/stones-compressed.mp4" type="video/mp4" />
-      </video>
     </section>
     <section class="page">
       <div class="content">
         <div class="row resume-row">
           <div class="col-xs-12 col-md-8">
         <h2>Hi, I'm <span class="auto-type"></span></h2>
-        <p>I am 21 years old and recently graduated from The University of Manchester with First Class Honours in Economics. I am passionate about finance, software development and data, and I am equipped with a strong economics, econometrics, finance and mathematics background coupled with programming proficiencies. Check out my <a href="">resume</a>, <a href="">GitHub</a> or you can <a href="">contact</a> me for more information.</p>
+        <p>I am {{age}} years old and recently graduated from The University of Manchester with First Class Honours in Economics. I am passionate about finance, software development and data, and I am equipped with a strong economics, econometrics, finance and mathematics background coupled with programming proficiencies. Check out my <a href="">resume</a>, <a href="">GitHub</a> or you can <a href="">contact</a> me for more information.</p>
         <p>Currently I am working as a freelance software developer whilst pursuing employment opportunities in the field of finance and technology.
         </p>
             </div>
@@ -71,7 +68,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script>
-      var typed = new Typed(".auto-type", {
+      const typed = new Typed(".auto-type", {
         strings: ["Leo", "an Economics Graduate and Python Developer"],
         typeSpeed: 50,
         backSpeed: 25,
@@ -79,10 +76,7 @@
         loop: true
       })
     </script>
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-      crossorigin="anonymous"
-    ></script> -->
+      <script src="/static/particles.js"></script>
+    <script src="/static/app.js"></script>
   </body>
 </html>
