Remove section width

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,9 +69,7 @@ header nav a:hover {
 /* Landing Page */
 
 #landing-page {
-  position: relative;
-  align-items: center;
-  justify-content: center;
+  margin:auto;
 }
 section .title-box {
   position: absolute;
