--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -198,14 +198,8 @@ canvas {
     transform: translateY(0);
 }
 
-.link-icons:nth-child(1) {
-  transition-delay: 100ms;
-}
-.link-icons:nth-child(2) {
-  transition-delay: 300ms;
-}
-.link-icons:nth-child(3) {
-  transition-delay: 500ms;
+.link-icons {
+  transition-delay: 50ms;
 }
 
 .logo:nth-child(1) {
