--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -232,3 +232,10 @@ canvas {
 .logo:nth-child(10) {
     transition-delay: 350ms;
 } 
+
+.about-link {
+  text-decoration: none;
+}
+.about-link:hover {
+  text-decoration: underline;
+}
