--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -17,8 +17,8 @@ html {
 }
 body {
   overflow-y: auto;
-  overflow-x:hidden;
-  height:100%;
+  overflow-x: hidden;
+  height: 100%;
 }
 h1 {
   font-family: Garamond, Baskerville, Baskerville Old Face, Hoefler Text,
@@ -134,6 +134,10 @@ row {
   margin-left: 30px;
   margin-bottom: 20px;
 }
+.logo-container {
+  margin: auto;
+  padding: 30px;
+}
 
 .skills-photo {
   max-height: 120px;
@@ -164,7 +168,6 @@ footer {
   }
 }
 
-
 #particles-js {
   width: 100%;
   height: 90vh;
@@ -180,11 +183,10 @@ canvas {
 
 /* Animate on Scroll */
 .hidden {
-    opacity: 0;
-    filter: blur(5px);
-    transform: translateY(100%);
-    transition: 0;
-
+  opacity: 0;
+  filter: blur(5px);
+  transform: translateY(100%);
+  transition: 0;
 }
 @media (prefers-reduced-motion: no-preference) {
   .hidden {
@@ -193,9 +195,9 @@ canvas {
 }
 
 .visible {
-    opacity: 1;
-    filter: blur(0);
-    transform: translateY(0);
+  opacity: 1;
+  filter: blur(0);
+  transform: translateY(0);
 }
 
 .link-icons {
@@ -203,35 +205,35 @@ canvas {
 }
 
 .logo:nth-child(1) {
-    transition-delay: 100ms;
+  transition-delay: 100ms;
 }
 .logo:nth-child(2) {
-    transition-delay: 150ms;
+  transition-delay: 150ms;
 }
 .logo:nth-child(3) {
-    transition-delay: 200ms;
+  transition-delay: 200ms;
 }
 .logo:nth-child(4) {
-    transition-delay: 250ms;
+  transition-delay: 250ms;
 }
 .logo:nth-child(5) {
-    transition-delay: 300ms;
+  transition-delay: 300ms;
 }
 .logo:nth-child(6) {
-    transition-delay: 350ms;
+  transition-delay: 350ms;
 }
 .logo:nth-child(7) {
-    transition-delay: 250ms;
-} 
+  transition-delay: 250ms;
+}
 .logo:nth-child(8) {
-    transition-delay: 300ms;
-} 
+  transition-delay: 300ms;
+}
 .logo:nth-child(9) {
-    transition-delay: 350ms;
-} 
+  transition-delay: 350ms;
+}
 .logo:nth-child(10) {
-    transition-delay: 350ms;
-} 
+  transition-delay: 350ms;
+}
 
 .about-link {
   text-decoration: none;
